# mesh-analysis-tool

./: CMakeLists.txt  README.md
examples/: example_usage.cpp
include/: obj_analysis.h
src/: obj_analysis.cpp
test/: test_obj_analysis.cpp
